--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -25,7 +25,7 @@
                                                 style="margin-bottom:25px"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <input type="email" id="email" name="email" class="form-control"
-                                                    required>
+                                                    required value="yzhatca@gmail.com">
                                                 <label class="form-label" for="email">Email</label>
                                             </div>
                                         </div>
@@ -34,7 +34,7 @@
                                                 style="margin-bottom:25px"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <input type="password" id="password" name="password"
-                                                    class="form-control" required>
+                                                    class="form-control" value="123" required>
                                                 <label class="form-label" for="password">Password</label>
                                             </div>
                                         </div>
