--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -25,7 +25,7 @@
                                                 style="margin-bottom:25px"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <input type="email" id="email" name="email" class="form-control"
-                                                    required value="yzhatca@gmail.com">
+                                                    value="yzhatca@gmail.com" required>
                                                 <label class="form-label" for="email">Email</label>
                                             </div>
                                         </div>
